--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "mastnova",
   "license": "ISC",
-  "devDependencies":{
+  "devDependencies": {
     "browserify": "*",
     "flux": "*",
     "gulp": "*",
@@ -16,7 +16,8 @@
     "vinyl-source-stream": "*",
     "object-assign": "*"
   },
-  "dependencies":{
+  "dependencies": {
+    "firebase": "2.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
